[gd_scene load_steps=14 format=3 uid="uid://bk24l4ed5mmw4"]

[ext_resource type="FontFile" uid="uid://58peuvhwwdw0" path="res://recursos/Fontes/Ubuntu Bold (TFF)/Ubuntu-Bold.ttf" id="1"]
[ext_resource type="Script" path="res://Cenas/Lista_de_genios/script_jogo.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://cxehyvwhj15qc" path="res://recursos/Imagens/Quadro.png" id="5"]
[ext_resource type="Texture2D" uid="uid://di1054d2fux31" path="res://recursos/Imagens/configurações.png" id="5_n5v30"]
[ext_resource type="Texture2D" uid="uid://csht4t6nxx877" path="res://recursos/Imagens/Fundo.png" id="6"]
[ext_resource type="Texture2D" uid="uid://diqbmjd077j5d" path="res://recursos/Imagens/configurações apertado.png" id="6_o06v8"]
[ext_resource type="PackedScene" uid="uid://cqje1t5uaeym2" path="res://Cenas/Menus/menu_de_pausa.tscn" id="7_5k6vd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5sbfy"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tamx6"]
texture = ExtResource("5")

[sub_resource type="FontFile" id="4"]
fallbacks = Array[Font]([ExtResource("1")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/50/0/ascent = 0.0
cache/0/50/0/descent = 0.0
cache/0/50/0/underline_position = 0.0
cache/0/50/0/underline_thickness = 0.0
cache/0/50/0/scale = 1.0
cache/0/50/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/50/0 = Vector2(0, 0)

[sub_resource type="FontVariation" id="FontVariation_ynun1"]
base_font = ExtResource("1")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_34nje"]
bg_color = Color(0, 0.756863, 1, 1)
border_width_bottom = 30
border_color = Color(0.34902, 0.364706, 0.368627, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ksarl"]
bg_color = Color(0.470588, 0.835294, 1, 1)
border_width_bottom = 10
border_color = Color(0.34902, 0.364706, 0.368627, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100
shadow_color = Color(1, 1, 1, 0.6)

[node name="Cena_principal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3")
cor_certo = Color(0.109804, 0.803922, 0.0156863, 1)
cor_errado = Color(0.788235, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="Fundo" type="TextureRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("6")

[node name="Gui" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 386.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_5sbfy")
metadata/_edit_lock_ = true

[node name="quadro" type="Panel" parent="Gui"]
layout_mode = 0
offset_left = 256.0
offset_top = 53.0
offset_right = 1064.0
offset_bottom = 317.0
theme_override_styles/panel = SubResource("StyleBoxTexture_tamx6")
metadata/_edit_lock_ = true

[node name="foto_genio" type="Sprite2D" parent="Gui"]
position = Vector2(150, 190)
scale = Vector2(0.256389, 0.244038)
metadata/_edit_lock_ = true

[node name="texto_quadro" type="RichTextLabel" parent="Gui"]
layout_mode = 0
offset_left = 287.0
offset_top = 75.0
offset_right = 1048.0
offset_bottom = 302.0
theme_override_fonts/normal_font = SubResource("4")
theme_override_font_sizes/normal_font_size = 50
metadata/_edit_lock_ = true

[node name="Tempo" type="RichTextLabel" parent="Gui"]
layout_mode = 0
offset_left = 656.0
offset_top = 248.0
offset_right = 1032.0
offset_bottom = 288.0
theme_override_fonts/normal_font = ExtResource("1")
theme_override_font_sizes/normal_font_size = 35
metadata/_edit_lock_ = true

[node name="Timer" type="Timer" parent="Gui/Tempo"]
process_mode = 1
autostart = true

[node name="nivel_atual" type="RichTextLabel" parent="Gui"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.059
anchor_top = 0.207
anchor_right = 0.059
anchor_bottom = 0.207
offset_left = 232.28
offset_top = 168.098
offset_right = 456.28
offset_bottom = 216.098
theme_override_fonts/normal_font = ExtResource("1")
theme_override_font_sizes/normal_font_size = 35
metadata/_edit_lock_ = true

[node name="Pausar" type="TouchScreenButton" parent="Gui"]
position = Vector2(975, 1812)
scale = Vector2(0.292079, 0.310976)
texture_normal = ExtResource("5_n5v30")
texture_pressed = ExtResource("6_o06v8")
action = "pausar"
metadata/_edit_lock_ = true

[node name="Botoes" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -495.997
offset_top = -560.0
offset_right = 495.998
offset_bottom = 807.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 50
alignment = 1
metadata/_edit_lock_ = true

[node name="resposta1" type="Button" parent="Botoes"]
custom_minimum_size = Vector2(930, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = SubResource("FontVariation_ynun1")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_34nje")
theme_override_styles/hover = SubResource("StyleBoxFlat_ksarl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ksarl")
theme_override_styles/focus = SubResource("StyleBoxFlat_34nje")
icon_alignment = 1
metadata/_edit_lock_ = true

[node name="resposta2" type="Button" parent="Botoes"]
custom_minimum_size = Vector2(930, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = SubResource("FontVariation_ynun1")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_34nje")
theme_override_styles/hover = SubResource("StyleBoxFlat_ksarl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ksarl")
theme_override_styles/focus = SubResource("StyleBoxFlat_34nje")
icon_alignment = 1
metadata/_edit_lock_ = true

[node name="resposta3" type="Button" parent="Botoes"]
custom_minimum_size = Vector2(930, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = SubResource("FontVariation_ynun1")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_34nje")
theme_override_styles/hover = SubResource("StyleBoxFlat_ksarl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ksarl")
theme_override_styles/focus = SubResource("StyleBoxFlat_34nje")
icon_alignment = 1
metadata/_edit_lock_ = true

[node name="resposta4" type="Button" parent="Botoes"]
custom_minimum_size = Vector2(930, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = SubResource("FontVariation_ynun1")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_34nje")
theme_override_styles/hover = SubResource("StyleBoxFlat_ksarl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ksarl")
theme_override_styles/focus = SubResource("StyleBoxFlat_34nje")
icon_alignment = 1
metadata/_edit_lock_ = true

[node name="menu_de_pausa" parent="." instance=ExtResource("7_5k6vd")]
visible = false
layout_mode = 1

[connection signal="timeout" from="Gui/Tempo/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Gui/Pausar" to="." method="_on_Pausar_pressed"]
